--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "homepage": "https://github.com/msabo1/expressts#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.37",
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
