--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "expressts",
-  "version": "0.0.1",
-  "description": "Typescript wrapper around Express.js framework",
-  "main": "index.js",
+  "version": "0.0.1-alpha",
+  "description": "Express TypeScript is decorator driven TypeScript framework on top of Express.js that allows you to use Express truly TypeScript way.",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
