--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expressts",
+  "name": "@msabo1/expressts",
   "version": "0.0.1-alpha",
   "description": "Express TypeScript is decorator driven TypeScript framework on top of Express.js that allows you to use Express truly TypeScript way.",
   "main": "dist/src/index.js",
@@ -27,9 +27,11 @@
   },
   "homepage": "https://github.com/msabo1/expressts#readme",
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.37",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.37"
   }
 }
