--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@msabo1/expressts",
-  "version": "0.0.2-alpha",
+  "version": "0.0.3-alpha",
   "description": "Express TypeScript is decorator driven TypeScript framework on top of Express.js that allows you to use Express truly TypeScript way.",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "tsc"
